<resources>
    <string name="app_name">BusTime2</string>
    <string name="favourites">Favourites</string>
    <string name="nearby">Nearby</string>
    <string name="settings">Settings</string>

    <!-- placeholder texts -->
    <string name="placeholder_busstoptitle">Blk 318</string>
    <string name="placeholder_busstoproad">Ubi Ave 1</string>
    <string name="placeholder_busstopcode">#71101</string>
</resources>