<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/item0"
        android:title="@string/favourites"
        android:icon="@drawable/ic_heart_white_outlined"

        app:cnb_iconColor = "@color/white"
        app:cnb_textColor = "@color/white"
        app:cnb_backgroundColor = "@color/mainLightPurple"
        />

    <item
        android:id="@+id/item1"
        android:title="@string/nearby"
        android:icon="@drawable/ic_map_white_outlined"

        app:cnb_iconColor = "@color/white"
        app:cnb_textColor = "@color/white"
        app:cnb_backgroundColor = "@color/mainLightPurple"
        />

    <item
        android:id="@+id/item2"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_white_outlined"

        app:cnb_iconColor = "@color/white"
        app:cnb_textColor = "@color/white"
        app:cnb_backgroundColor = "@color/mainLightPurple"
        />

</menu>