<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/busStopTitle_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_busstoptitle"
        style="@style/busStopTitleStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="18dp"
        />

    <TextView
        android:id="@+id/busStopRoad_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_busstoproad"
        style="@style/busStopOtherStyle"
        app:layout_constraintStart_toStartOf="@id/busStopTitle_TV"
        app:layout_constraintTop_toBottomOf="@id/busStopTitle_TV"
        android:layout_marginTop="2dp"
        />

    <TextView
        android:id="@+id/busStopCode_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_busstopcode"
        style="@style/busStopOtherStyle"
        app:layout_constraintStart_toStartOf="@id/busStopTitle_TV"
        app:layout_constraintTop_toBottomOf="@id/busStopRoad_TV"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
